added cors checking
