# services/perfumist/docs/swagger.yaml
@@ -115,6 +115,10 @@ paths:
           description: Incorrect parameters
           schema:
             $ref: '#/definitions/handlers.SuggestResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/handlers.SuggestResponse'
         "500":
           description: Internal Server Error
           schema:
